@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Chris Korda: Press</title>
 <meta name="author" content="Chris Korda">
-<meta name="date" content="2022-04-27">
+<meta name="date" content="2022-07-06">
 <meta name="description" content="Chris Korda: Press">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./style.css" rel=stylesheet title=default type=text/css>
@@ -26,10 +26,18 @@
 <!--  content goes HERE  -->
 <h2>Chris Korda: Press</h2><p>For more detailed press data, see this <a href="https://docs.google.com/spreadsheets/d/1qHem5TOKMZo66Vzlr270AGx9YvRbMGy1cXBzXZ3KQPQ/edit?usp=sharing">spreadsheet</a>.<p><table border=1>
 <tr><th>Date</th><th>Publication</th><th>Title</th><th>Language</th><th>Words</th></tr>
-<tr><td>02/14/22</td><td><a href="http://www.agenteprovocador.es/publicaciones/salva-el-planeta-y-suicidate-los-suicidas-de-barcelona">Agente Provocador</a></td><td><a href="http://www.agenteprovocador.es/publicaciones/salva-el-planeta-y-suicidate-los-suicidas-de-barcelona">Salva el planeta y &iexcl;suic&iacute;date! Los suicidas de Barcelona</a></td><td>Spanish</td><td>&nbsp;</td>
-<tr><td>02/04/22</td><td><a href="https://www.dailystar.co.uk/news/weird-news/twisted-cult-campaigned-humanity-kill-26141629">Daily Star</a></td><td><a href="https://www.dailystar.co.uk/news/weird-news/twisted-cult-campaigned-humanity-kill-26141629">Twisted cult campaigned for all humanity to kill itself and provided instructions online</a></td><td></td><td>&nbsp;</td>
+<tr><td>07/02/22</td><td><a href="https://www.clotmag.com/oped/an-ecological-provocatrice-a-reflection-on-chris-kordas-universe-by-andra-amber-nikolayi">CLOT Magazine</a></td><td><a href="https://www.clotmag.com/oped/an-ecological-provocatrice-a-reflection-on-chris-kordas-universe-by-andra-amber-nikolayi">An Ecological Provocatrice, a reflection on Chris Korda&rsquo;s universe</a></td><td></td><td>&nbsp;</td>
+<tr><td>06/20/22</td><td><a href="https://tissuemagazine.com/series/chris-korda/">Tissue Magazine</a></td><td><a href="https://tissuemagazine.com/series/chris-korda/">Chris Korda: The Heartbreaking Tragedy of Collective Failure</a></td><td></td><td>&nbsp;</td>
+<tr><td>06/16/22</td><td><a href="https://shop.terraformafestival.com/products/terraforma-journal-3">Terraforma Journal</a></td><td><a href="https://shop.terraformafestival.com/products/terraforma-journal-3">Chris Korda - The Wo(Man) of the Future</a></td><td></td><td>&nbsp;</td>
+<tr><td>06/08/22</td><td><a href="https://www.lanouvellerepublique.fr/poitiers/poitiers-grand-bazar-en-vue-au-confort-moderne">La Nouvelle R&eacute;publique</a></td><td><a href="http://www.churchofeuthanasia.org/press/lanouvellerepublique.html">Poitiers : Grand bazar en vue au Confort moderne</a></td><td>French</td><td>133</td>
+<tr><td>06/06/22</td><td><a href="https://www.lesinrocks.com/arts-et-scenes/les-5-expos-a-ne-pas-rater-en-juin-2022-474666-06-06-2022/">Les Inrockuptibles</a></td><td><a href="http://www.churchofeuthanasia.org/press/lesinrockuptibles2.html">Les 5 expos &agrave; ne pas rater en juin 2022</a></td><td>French</td><td>277</td>
+<tr><td>04/01/22</td><td><a href="https://www.field-notes.berlin/de/festivals/58524/releases-des-monats/58526/releases-des-monats/99246/chris-korda-passion-for-numbers-mental-groove-lp-digital">Field Notes Berlin</a></td><td><a href="http://www.churchofeuthanasia.org/press/fieldnotesberlin.html">Chris Korda &ndash; Passion for Numbers (Mental Groove, LP/digital)</a></td><td>German</td><td>113</td>
+<tr><td>03/22/22</td><td><a href="https://beatburguer.com/chris-korda-passion-for-numbers-mental-groove/">Beatburguer</a></td><td><a href="http://www.churchofeuthanasia.org/press/beatburguer.html">Chris Korda: Passion for Numbers (Mental Groove) </a></td><td>Spanish</td><td>958</td>
+<tr><td>03/07/22</td><td><a href="https://ra.co/news/76915">Resident Advisor</a></td><td><a href="http://www.churchofeuthanasia.org/press/ra5.html">Chris Korda announces two new albums and a retrospective exhibition in 2022</a></td><td></td><td>183</td>
+<tr><td>02/14/22</td><td><a href="http://www.agenteprovocador.es/publicaciones/salva-el-planeta-y-suicidate-los-suicidas-de-barcelona">Agente Provocador</a></td><td><a href="http://www.churchofeuthanasia.org/press/agenteprovocador.html">Salva el planeta y &iexcl;suic&iacute;date! Los suicidas de Barcelona</a></td><td>Spanish</td><td>1104</td>
+<tr><td>02/04/22</td><td><a href="https://www.dailystar.co.uk/news/weird-news/twisted-cult-campaigned-humanity-kill-26141629">Daily Star</a></td><td><a href="http://www.churchofeuthanasia.org/press/dailystar.html">Twisted cult campaigned for all humanity to kill itself and provided instructions online</a></td><td></td><td>440</td>
 <tr><td>12/23/21</td><td><a href="https://rwm.macba.cat/en/specials/objecthood-8">Objecthood</a></td><td><a href="http://www.churchofeuthanasia.org/press/objecthood.html">Chris Korda: A thin layer of oily rock</a></td><td></td><td>13012</td>
-<tr><td>12/14/21</td><td><a href="https://www.traxmag.com/shop/magazines/trax-233-possession-les-demons-de-minuit-a-precommander/">Trax</a></td><td><a href="http://www.churchofeuthanasia.org/press/traxmag.html">Chris Korda: Game Over</a></td><td>French <a href="http://www.churchofeuthanasia.org/press/traxmag_eng.html">(English)</a></td><td>4838</td>
+<tr><td>12/14/21</td><td><a href="https://www.traxmag.com/techno-apocalypse-et-euthanasie-chris-korda-annonce-le-game-over-ecologique/">Trax</a></td><td><a href="http://www.churchofeuthanasia.org/press/traxmag.html">Chris Korda: Game Over</a></td><td>French <a href="http://www.churchofeuthanasia.org/press/traxmag_eng.html">(English)</a></td><td>4838</td>
 <tr><td>08/20/21</td><td><a href="https://trommelmusic.com/featured/chris-korda-a-voice-for-the-future/">Trommel</a></td><td><a href="http://www.churchofeuthanasia.org/press/trommel3.html">Chris Korda: A voice for the future</a></td><td></td><td>3869</td>
 <tr><td>04/15/21</td><td><a href="https://abonnement.sopress.net/common/product-article/1048">Big Bang</a>, p. 198</td><td><a href="http://www.churchofeuthanasia.org/press/bigbang.html">Suicide g&eacute;n&eacute;ral?</a></td><td>French</td><td>3695</td>
 <tr><td>03/16/21</td><td><a href="https://www.theransomnote.com/music/articles/apologize-to-the-future-chris-korda-on-the-crisis-facing-our-planet/">Ransom Note</a></td><td><a href="http://www.churchofeuthanasia.org/press/ransomnote2.html">'Apologize to the Future': Chris Korda on the crisis facing our planet</a></td><td></td><td>2999</td>
@@ -73,7 +81,7 @@
 <tr><td>09/10/19</td><td><a href="https://groove.de/2019/09/10/chris-korda-die-bob-dylan-des-klimawandels/">Groove</a></td><td><a href="http://www.churchofeuthanasia.org/press/groove.html">Chris Korda, Die Bob Dylan des Klimawandels</a></td><td>German <a href="http://www.churchofeuthanasia.org/press/groove_eng.html">(English)</a></td><td>1830</td>
 <tr><td>07/30/19</td><td><a href="https://www.saywhatmag.com/chris-korda-alienation-into-polymeter/">Say What?</a></td><td><a href="http://www.churchofeuthanasia.org/press/saywhat.html">Chris Korda: Alienation into polymeter</a></td><td></td><td>933</td>
 <tr><td>07/25/19</td><td><a href="https://trommelmusic.com/news/chris-korda-prepares-boundary-breaking-lp-for-perlon/">Trommel</a></td><td><a href="http://www.churchofeuthanasia.org/press/trommel1.html">Chris Korda prepares boundary breaking LP for Perlon</a></td><td></td><td>290</td>
-<tr><td>07/19/19</td><td><a href="https://www.frieze.com/article/teach-masturbation">Frieze</a></td><td><a href="https://www.frieze.com/article/teach-masturbation">Teach Masturbation - Lessons from The Church of Euthanasia</a></td><td></td><td>&nbsp;</td>
+<tr><td>07/19/19</td><td><a href="https://www.frieze.com/article/teach-masturbation">Frieze</a>, One Takes</td><td><a href="http://www.churchofeuthanasia.org/press/frieze.html">Teach Masturbation - Lessons from The Church of Euthanasia</a></td><td></td><td>412</td>
 <tr><td>06/01/19</td><td>Flash Art Magazine , issue 326 p. 11</td><td><a href="http://www.churchofeuthanasia.org/press/flash_art.html">CHRIS KORDA 'The Church of Euthanasia Archives'</a></td><td></td><td>366</td>
 <tr><td>04/19/19</td><td><a href="https://www.lesinrocks.com/arts-et-scenes/chris-korda-et-darja-bajagic-exposent-a-paris-deux-regards-critiques-de-la-bien-pensance-147700-19-04-2019/">Les Inrockuptibles</a></td><td><a href="http://www.churchofeuthanasia.org/press/lesinrockuptibles.html">Chris Korda et Darja Bajagi? exposent &agrave; Paris</a></td><td>French</td><td>759</td>
 <tr><td>04/15/19</td><td><a href="https://i-d.vice.com/fr/article/7xgzzy/qui-est-chris-korda-lartiste-punk-qui-pronait-le-suicide-dans-lamerique-consumeriste-des-annees-1990">i-D</a>, Musique</td><td><a href="http://www.churchofeuthanasia.org/press/i-d.html">qui est chris korda, l'artiste punk qui pr&ocirc;nait le suicide dans l'am&eacute;rique consum&eacute;riste des ann&eacute;es 1990?</a></td><td>French</td><td>1866</td>
