@@ -32,7 +32,7 @@
 
 <p>
 Chris Korda is a <a href="music.html">musician</a>, <a href="art.html">artist</a>, and <a href="software.html">inventor</a>.
-Chris is best known for <a href="https://www.churchofeuthanasia.org/">The Church of Euthanasia</a>, and as a composer and performer of electronic music.
+Chris is best known for founding <a href="https://www.churchofeuthanasia.org/">The Church of Euthanasia</a>, and as a composer and performer of electronic music.
 Chris has also developed software <a href="https://linkedin.com/in/ckorda">professionally</a> for over 35 years.
 
 <!--  content stops HERE  -->
