@@ -222,6 +222,12 @@
 <td>France</td>
 <tr>
 <tr>
+<td>07/9/22</td>
+<td>IBOAT</td>
+<td>Bordeaux</td>
+<td>France</td>
+<tr>
+<tr>
 <td>07/01/22</td>
 <td>Flash Cocotte/Le Trabendo</td>
 <td>Paris</td>
