@@ -24,6 +24,16 @@
 <div id=body>
 <!--  content goes HERE  -->
 
+<p>Read: <a href="https://www.clotmag.com/oped/an-ecological-provocatrice-a-reflection-on-chris-kordas-universe-by-andra-amber-nikolayi">An Ecological Provocatrice, a reflection on Chris Korda’s universe</a> in CLOT Magazine
+
+<p>Read: <a href="https://tissuemagazine.com/series/chris-korda/">Chris Korda: The Heartbreaking Tragedy of Collective Failure</a> in Tissue Magazine
+
+<p>Buy: <a href="https://shop.terraformafestival.com/products/terraforma-journal-3">Chris Korda - The Wo(Man) of the Future</a> in Terraforma Journal #3
+
+<p>Read: <a href="https://www.traxmag.com/techno-apocalypse-et-euthanasie-chris-korda-annonce-le-game-over-ecologique/">TRAX: Techno, apocalypse et euthanasie</a> (English translation <a href="https://www.churchofeuthanasia.org/press/traxmag_eng.html">here</a>)
+
+<p>Read: <a href="https://www.lesinrocks.com/arts-et-scenes/les-5-expos-a-ne-pas-rater-en-juin-2022-474666-06-06-2022/">Les 5 expos à ne pas rater en juin 2022!</a> (Le Confort Moderne exhibition)
+
 <p>Read: <a href="https://lastchancetourism.blogspot.com/">Last Chance Tourism</a> (my new blog!)
 
 <p>Listen: <a href="https://shop.mentalgroove.ch/album/passion-for-numbers">Passion for Numbers</a> released April 4, 2022
